# BRIpinfo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  teste.json
bripinfo/: __main__.py  commands.py  config.ini  core.py  registro_br.py  settings.py  setup.py
tests/: test_bripinfo.py
